--- a/frontend/USER/src/pages/css/branchsearch.css
+++ b/frontend/USER/src/pages/css/branchsearch.css
@@ -335,7 +335,7 @@
     z-index: 1000;
 }
 
-.modal-content {
+.modal-content-bs {
     background: white;
     border-radius: 8px;
     width: 95%;
@@ -437,7 +437,7 @@
 
 
 
-.modal-content  {
+.modal-content-bs  {
     position: absolute;
     top: 1rem;
     left: 1rem;  /* Position on left side */
@@ -451,7 +451,7 @@
     z-index: 1;
 }
 
-.modal-content  i {
+.modal-content-bs  i {
     color: #ffd700;
 }
 
@@ -509,7 +509,7 @@
     z-index: 1000;
 }
 
-.modal-content {
+.modal-content-bs {
     background: white;
     padding: 24px;
     border-radius: 12px;
@@ -518,12 +518,12 @@
     text-align: center;
 }
 
-.modal-content h3 {
+.modal-content-bs h3 {
     margin-bottom: 16px;
     color: #333;
 }
 
-.modal-content p {
+.modal-content-bs p {
     margin-bottom: 12px;
     color: #666;
 }
