--- a/frontend/ADMIN/src/pages/css/components/chart.css
+++ b/frontend/ADMIN/src/pages/css/components/chart.css
@@ -3,8 +3,8 @@
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0px 10px rgba(0,0,0,0.15);
-    width: 100%;
-    max-width: 1200px;
+    width: fit-content;
+    min-width: 300px;
     margin: 20px auto;
     transition: all 0.3s ease;
 }
@@ -18,7 +18,7 @@
 }
 
 .title-section {
-    display: flex;
+    /* display: inline; */
     align-items: center;
     gap: 20px;
 }
