--- a/frontend/ADMIN/src/pages/css/components/home.css
+++ b/frontend/ADMIN/src/pages/css/components/home.css
@@ -19,3 +19,9 @@ h1{
     font-size: 50px;
     font-family:'Courier New', Courier, monospace;
 }
+
+.chart-row {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
