--- a/frontend/ADMIN/src/pages/css/components/sidebar.css
+++ b/frontend/ADMIN/src/pages/css/components/sidebar.css
@@ -1,5 +1,5 @@
 .sideBar {
-    width: 235px;
+    width: 400px;
     background-color: #fefcfc;
     padding: 20px;
     border-right: 1px solid #ddd;
@@ -8,11 +8,16 @@
 
 .sideBar ul {
     list-style-type: none;
-    padding: 0;
+    padding: 20;
+    margin: 20px 0px;
 }
 
-.sideBar ul li {
+.sideBar li {
     margin: 15px 0;
+}
+
+.sideBar a {
+    display: block;
     font-size: 18px;
     cursor: pointer;
     background-color: #e183b5;
@@ -21,14 +26,12 @@
     font-weight: 600;
     color: white;
     border-radius: 10px;
-}
-
-.sideBar ul a {
     text-decoration: none;
-    color: white;
+    transition: all 0.3s ease;
+    margin: 20px; 
 }
 
-.sideBar ul li:hover {
+.sideBar a:hover {
     color: #0d0d0d;
     background-color: #e8ccde;
     transform: scale(1.1);
