--- a/frontend/ADMIN/src/pages/css/components/mgmt-customer.css
+++ b/frontend/ADMIN/src/pages/css/components/mgmt-customer.css
@@ -13,7 +13,7 @@
 .main-content-box {
     flex: 1;
     /* gap: 50px; */
-    margin: 0 100px;
+    /* margin: 0 100px; */
 }
 
 .header-container {
