--- a/frontend/ADMIN/src/pages/css/components/mgmt-general.css
+++ b/frontend/ADMIN/src/pages/css/components/mgmt-general.css
@@ -1,3 +1,25 @@
+.loading-spinner {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #ff0099; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Full height */
+}
+
 .mgmt-page {
     display: flex;
     flex-direction: column;
@@ -11,7 +33,6 @@
 }
 
 .main-content-box {
-    flex: 1;
     /* gap: 50px; */
     /* margin: 0 100px; */
 }
@@ -45,8 +66,6 @@ h1 {
 
 .table-box {
     border-radius: 10px;
-    width: 100%;
-    height: fit-content;
     padding: 30px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.15);
 }
