--- a/frontend/ADMIN/src/pages/css/components/sidebar.css
+++ b/frontend/ADMIN/src/pages/css/components/sidebar.css
@@ -1,26 +1,24 @@
 .sideBar {
-    width: 400px;
+    width: auto;
     background-color: #fefcfc;
-    padding: 20px;
     border-right: 1px solid #ddd;
     height: 100vh;
 }
 
 .sideBar ul {
     list-style-type: none;
-    padding: 20;
-    margin: 20px 0px;
+    margin:  0px;
 }
 
 .sideBar li {
-    margin: 15px 0;
+    padding: 15px;
 }
 
 .sideBar a {
     display: block;
     font-size: 18px;
     cursor: pointer;
-    background-color: #e183b5;
+    background-color: #6b0337;
     padding: 10px;
     text-align: center;
     font-weight: 600;
