KhanhTran_ThemChiNhanh (chưa xong)

--- a/frontend/ADMIN/src/pages/css/css-modals/add-branch.css
+++ b/frontend/ADMIN/src/pages/css/css-modals/add-branch.css
@@ -61,3 +61,10 @@
 .add-button:hover {
     background-color: #c93c91;
 }
+
+.error-message {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+    display: block;
+}
