--- a/frontend/ADMIN/src/pages/css/components/staff-add-booking.css
+++ b/frontend/ADMIN/src/pages/css/components/staff-add-booking.css
@@ -1,19 +1,26 @@
-.container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /* background: rgba(0, 0, 0, 0.5); */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .page-container {
     display: flex;
     flex: 1;
-    gap: 50px;
+    /* gap: 50px; */
+}
+
+.main-content-box {
+    flex: 1;
+    /* gap: 50px; */
+    /* margin: 0 100px; */
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+h1 {
+    margin: 50px 0;
+    font-size: 50px;
+    font-family: 'Arial', 'Courier', 'monospace';
 }
 
 .content {
@@ -24,7 +31,7 @@
     max-width: 90%;
     max-height: 90%;
     overflow-y: auto;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
     position: relative;
     display: flex;
     flex-direction: column;
@@ -42,7 +49,7 @@
 }
 
 .modal-section {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 .modal-section h3 {
@@ -54,8 +61,17 @@
     margin: 5px 0;
 }
 
+.dish-input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin: 20px auto;
+    width: fit-content;
+}
+
 .add-button {
-    margin-top: 20px;
+    margin-top: 0px;
     padding: 8px 12px;
     background-color: #f09;
     color: white;
@@ -63,6 +79,24 @@
     border-radius: 4px;
     cursor: pointer;
     align-self: center;
+}
+
+/* .add-button {
+    height: 40px;
+    margin-top: 0;
+    align-self: center;
+    padding: 8px 16px;
+    border-radius: 4px;
+} */
+
+.dish-input {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.dish-input input {
+    height: 40px;
 }
 
 .add-button:hover {
@@ -73,6 +107,7 @@
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .work-history-table th, .work-history-table td {
