--- a/frontend/ADMIN/src/pages/css/components/checkdish.css
+++ b/frontend/ADMIN/src/pages/css/components/checkdish.css
@@ -110,7 +110,7 @@
 
 .add-button {
     padding: 8px 16px;
-    background-color: #4CAF50; /* Green color */
+    background-color: #ff1493;; /* Green color */
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -119,5 +119,5 @@
 }
 
 .add-button:hover {
-    background-color: #45a049; /* Darker green color */
+    background-color: #9a5479;; /* Darker green color */
 }
