KhanhTran_ADD_delete  nhân viên

--- a/frontend/ADMIN/src/pages/css/css-modals/detail-staff.css
+++ b/frontend/ADMIN/src/pages/css/css-modals/detail-staff.css
@@ -133,7 +133,6 @@ h3 {
 
 .save-button {
     margin-top: 10px;
-    margin-bottom: 10px;
     padding: 8px 12px;
     background-color: #ff0099;
     color: white;
@@ -151,4 +150,19 @@ h3 {
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+.update-button-temp,
+.delete-button-temp {
+    margin-top: 10px;
+    padding: 8px 12px;
+    background-color: #ff4d4d; /* Red color for delete button */
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    align-self: center;
+}
+.update-button-temp:hover,
+.delete-button:hover {
+    background-color: #cc0000; /* Darker red on hover */
 }
